--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
   "homepage": "https://github.com/maximux13/use-persist",
   "devDependencies": {
     "esm": "^3.2.13",
-    "jest": "^24.3.1"
+    "jest": "^24.3.1",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
+    "react-hooks-testing-library": "^0.3.6"
+  },
+  "peerDependencies": {
+    "react": "^16.8.4"
   }
 }
