--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/maximux13/use-persist",
   "devDependencies": {
     "esm": "^3.2.13",
+    "husky": "^1.3.1",
     "jest": "^24.3.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
@@ -37,5 +38,10 @@
   },
   "dependencies": {
     "deepmerge": "^3.2.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn test"
+    }
   }
 }
