--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-persist",
-  "version": "0.0.1",
+  "version": "1.0.0-0",
   "description": "usePersist it's a hook to allow you store data in localstorage",
   "main": "dist/index.js",
   "files": [
